--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,14 +14,15 @@
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
-
-[[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications"
   weight = 40
+  
+  
+[[main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 50
 
 [[main]]
   name = "Contact"
