--- a/data/themes/raul.toml
+++ b/data/themes/raul.toml
@@ -5,7 +5,7 @@ name = "Raul"
 light = true
 
 # Primary
-primary = "#FF6C0C"
+primary = "#76777B"
 
 # Menu
 menu_primary = "#FF6C0C" # Material 500
