--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,6 +8,10 @@
   url = "#about"
   weight = 10
 
+[[main]]
+  name = "News"
+  url = "#accomplishments"
+  weight = 20
 
 [[main]]
   name = "Publications"
