--- a/data/themes/raul.toml
+++ b/data/themes/raul.toml
@@ -2,10 +2,10 @@
 name = "Raul"
 
 # Is theme light or dark?
-light = true
+light = false
 
 # Primary
-primary = "#4EC3E0"
+primary = "#10069F"
 
 # Menu
 menu_primary = "#76777B" # Material 500
